src/scss/partials/quickcontrols.scss
/*
##################################################
                QUICK CONTROLS
##################################################
*/
.quickcontrols {
  display: flex;
  position: fixed;
  bottom: 25px;
  right: 25px;
  width: 25vw;
  height: auto;
  /* justify-content: flex-end; */
  align-items: flex-end;
  flex-flow: column-reverse;
  /* background-color: rgba(0, 0, 0, .1); */
  z-index: 99;
}

.quickcontrols__menu {
  display: flex;
  position: relative;
  width: 100%;
  height: 20%;
  padding: 12.5px 0;
  justify-content: flex-end;
  align-items: center;
  /* background-color: rgba(255, 0, 0, .1); */
}

.quickcontrols__menu_overlay {
  position: absolute;
  width: 0px;
  height: 75px;
  transform: translateX(-52.5px);
  border-radius: 50px 0 0 50px;
  transition: all .3s ease-in-out 0s;
  /* background-color: red; */
  z-index: 0;
  animation-duration: .3s !important;
}

.quickcontrols__menu_overlay--articles {
  background-color: blue;
}

.quickcontrols__menu_overlay--tag {
  background-color: orange;
}

.quickcontrols__menu_name {
  display: none;
  color: white;
  text-transform: uppercase;
  font-family: Montserrat;
  font-size: 50px;
  z-index: 5;
  pointer-events: none;
}

.button__add {
  display: flex;
  position: relative;
  border-radius: 50px;
  justify-content: center;
  align-items: center;
  z-index: 99;
  cursor: pointer;
  transition: background-color .3s ease-in-out 0s;
}

.button__add_sub {
  display: none;
  width: 75px;
  height: 75px;
  margin-right: 15px;
  animation-duration: .5s !important;
}

.button__add_sub--articles {
  background-color: blue;
}

.button__add_sub--tag {
  background-color: orange;
  animation-delay: .1s;
}

.button__add--main {
  width: 100px;
  height: 100px;
  background-color: green;
}

.button__add_icon--cross {
  transform: rotate(-45deg);
  transition: transform .3s ease-in-out 0s;
}

.button__add_icon {
  height: 50%;
  z-index: 2;
}

